Bug 13247 - Closing a page during slow cloning causes crash in setJSStatusBarText
Summary: Closing a page during slow cloning causes crash in setJSStatusBarText
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 523.x (Safari 3)
Hardware: Mac OS X 10.4
: P1 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks: 8456
  Show dependency treegraph
 
Reported: 2007-03-31 12:09 PDT by Alexey Proskuryakov
Modified: 2007-04-09 11:37 PDT (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Proskuryakov 2007-03-31 12:09:56 PDT
Steps to reproduce:
1) Open http://www.squarefree.com/bookmarklets/testbrowsers.html
2) Click on "clone slowly"
3) Close the new window while the page is being re-created in it.

Thread 0 Crashed:
0    WebCore::Frame::setJSStatusBarText(WebCore::String const&) + 32 (Frame.cpp:706)
1    KJS::Window::put(KJS::ExecState*, KJS::Identifier const&, KJS::JSValue*, int) + 708 (kjs_window.cpp:1027)
2    void KJS::lookupPut<WebCore::JSDOMWindow, KJS::Window>(KJS::ExecState*, KJS::Identifier const&, KJS::JSValue*, int, KJS::HashTable const*, WebCore::JSDOMWindow*) + 116 (lookup.h:269)
3    WebCore::JSDOMWindow::put(KJS::ExecState*, KJS::Identifier const&, KJS::JSValue*, int) + 80 (JSDOMWindow.cpp:401)
4    KJS::AssignDotNode::evaluate(KJS::ExecState*) + 1836 (nodes.cpp:1466)
...
Comment 1 Anders Carlsson 2007-04-09 10:44:44 PDT
<rdar://problem/5120801>
Comment 2 Anders Carlsson 2007-04-09 11:37:57 PDT
Committed revision 20805.