LayoutTests:

Reviewed by Darin.

        <rdar://problem/5120801>
        http://bugs.webkit.org/show_bug.cgi?id=13247
        Closing a page during slow cloning causes crash in setJSStatusBarText (13247)

        * fast/dom/Window/setting-properties-on-closed-window-expected.txt: Added.
        * fast/dom/Window/setting-properties-on-closed-window.html: Added.

WebCore:

        Reviewed by Darin.

        <rdar://problem/5120801>
        http://bugs.webkit.org/show_bug.cgi?id=13247
        Closing a page during slow cloning causes crash in setJSStatusBarText (13247)

        * bindings/js/kjs_window.cpp:
        (KJS::Window::put):
        Return early if m_frame is null. A closed window only has one property, "closed"
        so no properties should be settable in that case.



Canonical link: https://commits.webkit.org/17410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20805 268f45cc-cd09-0410-ab3c-d52691b4dbfc